--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,8 +21,8 @@
 
         <!-- partial -->
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-        <script  src="static/js/main.js"></script>
-    <!--template-->
+       <!-- <script  src="static/js/main.js"></script>
+    template-->
 
 
     </body>
